maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:36: error: missing parameter type for expanded function
The argument types of an anonymous function must be fully known. (SLS 8.5)
Expected type was: ?
	for (x<-0 to Xmax; y<-0 to Ymax) {
                                         ^JediEscaper:37: error: not found: value &&
			case getIndication==9999 && y!=Ymax && getIndication(x,y+1)==i-1 && aMurNord(x,y+1)==false => setIndication(x,y,i)
                                                                                         ^JediEscaper:38: error: not found: value &&
			case getIndication==9999 && y!=0 && getIndication(x,y-1)==i-1 && aMurNord(x,y)==false => setIndication(x,y,i)
                                                                                      ^JediEscaper:39: error: not found: value &&
			case getIndication==9999 && x!=Xmax && getIndication(x+1,y)==i-1 && aMurOuest(x+1,y)==false => setIndication(x,y,i)
                                                                                         ^JediEscaper:40: error: not found: value &&
			case getIndication==9999 && x!=0 && getIndication(x-1,y)==i-1 && aMurOuest(x,y)==false => setIndication(x,y,i)
                                                                                      ^